lagt till chart design theory

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -141,7 +141,14 @@ Our ethical obligations with this project is providing a functional and stable p
 
 \chapter{Theory}
 
-\section{Choice of distance} %% Nån bra titel här?
+\section{Chart Design}
+The visual acuity charts this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) chart\cite{Ferris} and a project developed by PG Söderberg (need reference). 
+
+\subsection{ETDRS Chart}
+The ETDRS chart consists of 14 rows with 5 letters on each row.
+
+\section{Choice of distance} %% Nån bra titel här? Angular Magnification?
+% bör nämnas att 6m egentligen i teorin ska vara oändligt avstånd
 
 The specific distance of six meters is derived from how our eyes bend light. From a distance of six meters the rays of light seem to be nearly parallel to eachother. % Borde skriva mer utförligt? Referens behövs.
 It is important that the rays of light that hit the eyes are parallel because then the light focuses on the same spot in the back of the eyes, which in turn makes the measuring a lot easier and accurate. \cite{PGSoderberg} % Detta kanske ska flyttas till teori delen?
