--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -141,6 +141,14 @@ Our ethical obligations with this project is providing a functional and stable p
 
 \chapter{Theory}
 
+\section{Choice of distance} %% Nån bra titel här?
+\section{Chart Design}
+The visual acuity charts this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) chart\cite{Ferris} and a project developed by PG Söderberg (need reference). 
+
+\subsection{ETDRS Chart}
+The ETDRS chart consists of 14 rows with 5 letters on each row.
+
+
 \section{Theory of ofthalmology} %% Nån bra titel här?
 
 The specific distance of six meters is derived from how our eyes bend light. From a distance of six meters the rays of light seem to be nearly parallel to eachother.
