Added some more theory

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -141,12 +141,24 @@ Our ethical obligations with this project is providing a functional and stable p
 
 \chapter{Theory}
 
-\section{Choice of distance} %% Nån bra titel här?
 \section{Chart Design}
-The visual acuity charts this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) chart\cite{Ferris} and a project developed by PG Söderberg (need reference). 
+The visual acuity charts this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) chart\cite{Ferris} and a project developed by PG Söderberg (need reference) at Uppsala University Hospital. 
+
+\subsection{Optotypes}
+An optotype is a symbol that is used by a visual acuity chart. The optotypes are all the same width and height and designed on five by five grid and the most common type of symbol to use are letters but can be different depending on the patient\cite{Colenbrander}.
+
+\textit{Sloan letters} are ten optotypes that have been chosen because they are similarly difficult to read\cite{Ferris} and are used by most visual acuity charts\cite{Colenbrander}.
+
+\textit{Landholt C} is a sloan \textit{C} that is rotated by 0, 90, 180 or 270 degrees and is usually used in a more scientific setting. The Landholt C is used as reference when deciding the how difficult it is to read a specific optotype\cite{Colenbrander}.
+
+\textit{Tumbling E} is like the Landholt C, but with the letter \textit{E} instead of \textit{C}. This optotype can be used instead of the Sloan letters if the patient doesn't know how to read. The patient can instead show or tell the optician how the \textit{E} is rotated\cite{Colenbrander}.
+
+\textit{HVOT} are the letters \textit{H},\textit{V},\textit{O} and \textit{T}. These letters are chosen because they look the same if they are mirrored on the horizontally.
+
+\textit{LEA} are four symbols that look like a house, circle, box and apple. These symbols similar to HVOT since they look the same if you mirror them on the horizontal axis.
 
 \subsection{ETDRS Chart}
-The ETDRS chart consists of 14 rows with 5 letters on each row.
+The ETDRS chart consists of 14 rows with 5 letters on each row. Each 
 
 
 \section{Theory of ofthalmology} %% Nån bra titel här?
