Changed references so they work

--- a/Project/Report/references.bib
+++ b/Project/Report/references.bib
@@ -86,3 +86,13 @@
   title = {Impact of magnification when measuring VA at shorter
 distance than 6 m}
 }
+
+@article{Ferris,
+  author = {Ferris III L, Kassoff A, Bresnick H, Bailey I},
+  title = {New visual acuity charts for clinical research}
+}
+
+@article{Bailey,
+  author = {Bailey I, Lovie J},
+  title = {Design Principles for Visual Acuity Letter Charts}
+}
