--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -15,7 +15,8 @@
 
 %%%%%%%%%%%%%%%%% Start document %%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-\title{Report Draft\\Digitalization of Visual Acuity Testing}
+\title{Report Draft\\Digitalization of Visual Acuity Testing\\
+Fokusera gärna på implementation och theory}
 \author{Anders Ohlsson\\Christian Johansson\\Svante Nilsson}
 \maketitle
 
