--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -34,7 +34,6 @@ Digitalization of Visual Acuity Testing is a project involving development of a 
 \setcounter{page}{1}
 \chapter{Introduction}
 \section{Background}
-\subsection{Visual Acuity}
 To measure a patients visual acuity opticians today use charts with printed lines of continuously smaller symbols. The measurement is made by having the patient read symbols on the chart from a set distance. The person reads down the chart until it is no longer possible to make out the characters. Based on the size of the character the patient failed to recognize, a visual acuity can be determined. 
 
 For such charts to function as a basis for these standardized tests of visual acuity the testing environment must be carefully prepared. Among a few things, for the measurement to be optimal the chart must be placed at a distance of six meters from the patient, and the luminosity in the room must be at a specific level. In the event that the room is too small or the lighting insufficient, this can lead to irregularities or faulty measurements in some tests. 
@@ -135,8 +134,46 @@ The advantages of a digital system is the ability to change the layout, optotype
 \section{Disadvantages of a digital system}
 A disadvantage with this system is that digital screens become very expensive at large sizes, which limits the maximum distance a patient can sit from the screen. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be. This is very important when rendering type fonts because the edges should be as smooth as possible.
 
-
 \chapter{Theory}
+\section{Visual Acuity}
+The measurement of a persons visual accuity has an important constraint that needs to be followed. This constraint is the fact that our eyes works best physiologically from greater distances. On the other hand, at shorter distances our eyes tend to make what we see a bit unfocused. To make up for this shift in focus a minimum testing distance has to be enforced to ensure that the shift in focus stays as small as possible. This distance has been set to be six meters.
+
+\subsection{Measurement Distance}
+The specific distance of six meters is derived from how our eyes bend light. From that distance the rays of light entering our eyes are nearly parallel to eachother. It is important that the rays of light that hit the eyes are parallel because then the light focuses on the same spot in the back of the eyes. This happens because of the convex shape of the eye's lens. A convex shaped lens focuses parallel light onto the same focal point. Since a convex lens focuses parallel light to a focal point a concave lens instead spread light coming from a focal point to parallel rays. Combining these two type of lenses we can create a more focused light. 
+
+\subsection{Defocus Correction}
+To make up for the shift in focus a suitable lens is put in front of the eye at about the distance that you would wear glasses. The type of lens mostly depends on the shape of your eye, any eye disease you might have or the distance from the lens to the eye. An important property of the lenses is at what distance the focal point lays at. The focal point is the point behind a lens where the light is focused if hit by parallel rays of light. So, to create a more focused light, exactly what glasses do, we have to put a lens in front of the eye to create more parallel light. These lenses can either be plus or minus lenses, either spreading or contracting the light.
+
+In optician's terms a plus glass is a lens that focuses light coming further away (addition) and a minus glass is a lens that focuses light from nearer (subtraction). A real world example of this is glasses helping to correct near- and farsightedness.
+
+\subsection{Angular Magnification}
+%% Kan använda denna men måste skriva mer förklarande om själva bilden
+\begin{figure}[h]
+\centering
+\includegraphics[width=120mm]{images/Angular_magnification.png}
+\caption{Angular magnification\label{angular}}
+\end{figure}
+
+Though this is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. 
+
+The magnification is a problem is visual acuity testing because if the optotypes on the eye chart are enlarged then an error will show up in the results.
+
+%% Kan använda denna men måste skriva mer förklarande om själva bilden
+\begin{figure}[h]
+\centering
+\begin{tabular}{| l | l | l | l |}
+    \hline
+    Distance to chart (m) & Addition (D) & Magnification (Rel.) & Error (logMar) \\ \hline
+    4                     & 0.25         & 1.5                  & 0.17           \\ \hline
+    2                     & 0.5          & 3.5                  & 0.48           \\ \hline
+    1                     & 1            & 6.0                  & 0.78           \\ 
+    \hline
+    \end{tabular}
+    \caption{Magnification due to addition for closer distance\label{magtable}}
+\end{figure}
+
+There is need to have a standard to follow on how much addition or subtraction needed for a specific distance. Figure \ref{magtable} shows what values to use when testing visual acuity at shorter distances than six meters. \cite{PGSoderberg}
+
 \section{Chart Design}
 The visual acuity charts this project are based on ETDRS (Early Treatment Diabetic Retinopathy Study) chart\cite{Ferris} and a project developed by PG Söderberg (need reference) at Uppsala University Hospital. 
 
@@ -153,7 +190,7 @@ An optotype is a symbol that is used by a visual acuity chart. The optotypes are
 
 \textit{LEA} are four symbols that look like a house, circle, box and apple. These symbols similar to HVOT since they look the same if you mirror them on the horizontal axis.
 
-\begin{figure}
+\begin{figure}[h]
 \centering
 \begin{subfigure}{.3\textwidth}
   \centering
@@ -187,7 +224,7 @@ The ETDRS chart consists of 14 rows with 5 optotypes on each row. The size of ea
   	\label{eq:logmar}
 \end{equation}
 
-\begin{figure}[ht!]
+\begin{figure}[h]
 \centering
 \includegraphics[width=120mm]{images/logmar_calculation.png}
 \caption{The angle v is used to calculate the size in LogMAR of the optotype.\label{fig:logmar_calculation}}
@@ -195,49 +232,10 @@ The ETDRS chart consists of 14 rows with 5 optotypes on each row. The size of ea
 
 The optotypes on the top row of the chart is of the size 1.0 LogMAR and then each row below is decremented by 0.1 LogMAR to the last row which is -0.3 LogMAR. This means that each optotype is approximately 1.2589 the height of the optotypes on the row below \cite{Ferris}. The spacing between each optotype is equal to the width of an optotype from the same row and the spacing between each row is equal to the height of an optotype on the lower row.
 
-\section{Theory of ofthalmology} %% Nån bra titel här?
-The measurement of a persons visual accuity has an important constraint that needs to be followed. This constraint is the fact that our eyes works best physiologically from greater distances. On the other hand, at shorter distances our eyes tend to make what we see a bit unfocused. To make up for this shift in focus a minimum testing distance has to be enforced to ensure that the shift in focus stays as small as possible. This distance has been set to be six meters.
-
-The specific distance of six meters is derived from how our eyes bend light. From that distance the rays of light entering our eyes are nearly parallel to eachother. It is important that the rays of light that hit the eyes are parallel because then the light focuses on the same spot in the back of the eyes. This happens because of the convex shape of the eye's lens. A convex shaped lens focuses parallel light onto the same focal point. Since a convex lens focuses parallel light to a focal point a concave lens instead spread light coming from a focal point to parallel rays. Combining these two type of lenses we can create a more focused light. 
-
-To make up for the shift in focus a suitable lens is put in front of the eye at about the distance that you would wear glasses. The type of lens mostly depends on the shape of your eye, any eye disease you might have or the distance from the lens to the eye. An important property of the lenses is at what distance the focal point lays at. The focal point is the point behind a lens where the light is focused if hit by parallel rays of light. So, to create a more focused light, exactly what glasses do, we have to put a lens in front of the eye to create more parallel light. These lenses can either be plus or minus lenses, either spreading or contracting the light.
-
-In optician's terms a plus glass is a lens that focuses light coming further away (addition) and a minus glass is a lens that focuses light from nearer (subtraction). A real world example of this is glasses helping to correct near- and farsightedness.
-
-%% Kan använda denna men måste skriva mer förklarande om själva bilden
-\begin{figure}[ht!]
-\centering
-\includegraphics[width=120mm]{images/Angular_magnification.png}
-\caption{Angular magnification\label{angular}}
-\end{figure}
-
-Though this is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. 
-
-The magnification is a problem is visual acuity testing because if the optotypes on the eye chart are enlarged then an error will show up in the results.
-
-%% Kan använda denna men måste skriva mer förklarande om själva bilden
-\begin{figure}[ht!]
-\centering
-\begin{tabular}{| l | l | l | l |}
-    \hline
-    Distance to chart (m) & Addition (D) & Magnification (Rel.) & Error (logMar) \\ \hline
-    4                     & 0.25         & 1.5                  & 0.17           \\ \hline
-    2                     & 0.5          & 3.5                  & 0.48           \\ \hline
-    1                     & 1            & 6.0                  & 0.78           \\ 
-    \hline
-    \end{tabular}
-    \caption{Magnification due to addition for closer distance\label{magtable}}
-\end{figure}
-
-There is need to have a standard to follow on how much addition or subtraction needed for a specific distance. Figure \ref{magtable} shows what values to use when testing visual acuity at shorter distances than six meters. \cite{PGSoderberg}
-
 %%%%%%%%%%%%%%%%%%%%%%%%DEL 2: GENOMFÖRANDE
 \chapter{Implementation}
 
 %\section{Methods}
-
-
-
 %\subsection{Methods}
 %The screen controller will be built using Java and a few third-party libraries. Java has many built-in and well supported packages, and is also mostly platform independent. This suits our needs for future extensions of the system. Since the server mostly handles rendering of images having a good method of displaying images is needed. 
 
